--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.24.0",
+    "@paypal/react-paypal-js": "^8.8.2",
+    "appwrite": "^17.0.0",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
+    "slider": "^1.0.4",
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
