--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "slider": "^1.0.4",
-    "swiper": "^11.2.5"
+    "swiper": "^11.2.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
